syntax = "proto3";

package user;

option go_package = "./pb";

service UserRpc {
    rpc UserRegister (UserRegisterRequest) returns (UserRegisterResponse) {}
    rpc UserLogin (UserLoginRequest) returns (UserLoginResponse) {}
    rpc UserInfo (UserInfoRequest) returns (UserInfoResponse) {}
}

message UserInfoRequest {
    int64 user_id = 1;
    int64 target_user_id = 2;
}

message UserInfoResponse {
    User user = 1;
}

message User {
    int64 id = 1;
    string username = 2;
    int64 follow_count = 3;
    int64 follower_count = 4;
    bool is_follow = 5;
    string avatar = 6;
    string background_image = 7;
    string signature = 8;
    int64 total_favorited = 9;
    int64 work_count = 10;
    int64 favorite_count = 11;
}

message UserRegisterRequest {
    string username = 1;
    string password = 2;
}

message UserRegisterResponse {
    int64 user_id = 1;
}

message UserLoginRequest {
    string username = 1;
    string password = 2;
}

message UserLoginResponse {
    int64 user_id = 1;
}
